Fixed issue when procyon was not working on terminal
but was from ide, because procyon form terminal uses:
 - colooured ansi outpus for files
 - Systyem.console for help

Whether if it do not have terminal. it is
 - plaintext
 - stdout

So now it manipualtes system.console.wrtiter (sigh) and saves to file:(